added global download counter

--- a/index.html
+++ b/index.html
@@ -154,6 +154,9 @@
                         Download .passthm
                     </button>
                 </div>
+                <div class="download-count" id="downloadCount">
+                    Downloads: <span id="countValue">...</span>
+                </div>
             </section>
         </main>
 
